--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,6 @@ jobs:
     # deploy web app using publish profile credentials
     - uses: azure/webapps-deploy@v1
       with:
-        app-name: bugbashNinad
+        app-name: LinuxNinadBugbash
         package: .
-        publish-profile: ${{ secrets.AZURE_CREDENTIALS_f357ea48 }}
+        publish-profile: ${{ secrets.AZURE_CREDENTIALS_ea68eb90 }}
